package com.job.designpattern.strategy;

public class CashNormal extends CashSuper {

    @Override
    public double acceptCash(double money) {
        return super.acceptCash(money);
    }
}
