package com.job.designpattern.strategy;

public abstract class CashSuper {

    public double acceptCash(double money) {
        return money;
    }
}
